# Maze-Generation

./: .env  .gitignore  Makefile  Parsing.py  README.md  a_maze_ing.py  color_schemes.py  config.txt  generate.py  main.py  out  out.txt  preview.py  pyproject.toml  rendering.py  resolve_conf.py
bfs/: Cell.py  Gen.py  helpers.py  visualization.py
maze/: .env.example  Cell.py  Errors.py  Gen.py  Parsing.py  helpers.py  main.py  resolve_conf.py  visualization.py
mazegen/: .gitignore  Cell.py  Gen.py  Parsing.py  __init__.py  color_schemes.py  resolve_conf.py  visualization.py
